# Firebolt

./: .replit  Firebolt.py  LICENSE  README.md  Teapot.py  keep_alive.py  main.py.bak  pyproject.toml  quotes.py  quotes.txt
firebolt/: __init__.py  config.py  events.py.bak  setup.py
firebolt/cogs/: Quotes.py  SniperCog.py  __init__.py.bak  cat.py  moderation.py  music.py  mute.py  quotehandler.py
firebolt/managers/: database.py
firebolt/tools/: embed.py
teapot/: config.py  messages.py
teapot/cogs/: __init__.py  cmds.py  music.py
teapot/tools/: embed.py
